@@ -1,0 +1,1 @@
+.so man1/texi2dvi.1
